Use built-in image compiler